<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/aboutId"
        android:icon="@mipmap/ic_info_outline_white_36dp"
        android:orderInCategory="101"
        android:title="@string/aboutM"
        app:showAsAction="always">
    </item>
    <item
        android:id="@+id/copyId"
        android:icon="@mipmap/ic_content_copy_white_36dp"
        android:orderInCategory="101"
        android:title="@string/copy"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/cutId"
        android:icon="@mipmap/ic_content_cut_white_36dp"
        android:orderInCategory="101"
        android:title="@string/cut"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/deleteId"
        android:icon="@mipmap/ic_delete_forever_white_36dp"
        android:orderInCategory="101"
        android:title="@string/delete"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/renameId"
        android:icon="@mipmap/ic_create_white_36dp"
        android:orderInCategory="101"
        android:title="@string/rename"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/cancelId"
        android:icon="@mipmap/ic_clear_white_36dp"
        android:orderInCategory="101"
        android:title="@string/cancel"
        app:showAsAction="ifRoom">
    </item>

</menu>